# fastapi-cryptopulse

./: docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
backend/: __init__.py  dockerfile  main.py  requirements.txt  test.py
backend/db/: models.py  query.py
frontend/: .env  .gitignore  dockerfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: CryptoChart.tsx  LoadingDots.tsx  NavBar.tsx  NavBar.utils.ts
frontend/src/pages/: Coin.tsx  Dashboard.tsx  Home.tsx  Login.test.tsx  Login.tsx  Market.test.tsx  Market.tsx  Portfolio.tsx  Register.tsx
frontend/src/ui/: DashboardSkeleton.tsx
frontend/tests/: Redirect.test.tsx
