[project]
name = "fastapi-cryptopulse"
version = "0.1.0"
description = "CryptoPulse API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "requests"
]

[tool.setuptools]
packages = ["backend"]
